package biker;

message BikerProfile {
    optional string driving_license_number = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string bike_license_plate = 4;
    optional string phone = 5;
    optional string alternate_phone = 6;
    optional string device_type = 7;
    optional string email_id = 8;
    optional string alternate_email_id = 9;
    optional string selfie_url = 10;
    optional string driving_license_url = 11;

    // Address details
    optional string street_address = 12;
    optional string sub_locality = 13;
    optional string locality = 14;
    optional string city = 15;
    optional string state = 16;
    optional string country = 17;
    optional string zip_code = 18;
    optional string landmark = 19;
    optional string biker_type = 20;
    optional string bike_registration_papers_url = 21;

    // Referral source
    optional string referred_by = 22;
    optional string sales_person = 23;

    // Payment details
    enum PayMethod {
        CASH = 0;
        NEFT = 1;
        PAYPAL = 2;
    }
    optional PayMethod pay_method = 24;
    enum PayFrequency {
        DAILY = 0;
        WEEKLY_FRIDAY = 1;
        BIWEEKLY_FRIDAY = 2;
        SEMIMONTHLY = 3;
        MONTHLY = 4;
    }
    optional PayFrequency pay_frequency = 25;
    optional string fixed_pay = 26;
    optional string bank_account_ifsc = 27;
    optional string bank_account_name = 28;
    optional string bank_account_number = 29;

    optional string description = 30;
    optional int32 is_approved = 31;

    // Biker facebook profile
    optional string fb_page = 32;

    // Date on which this Record was created
    optional int64 date_created = 33;

    optional int64 account_expiry_date = 35;

    // Account password & device token given by GCM
    optional string password = 34;
    optional string device_token = 36;

}


message AssignedRequestId {
    optional string merchant_id = 1;
    optional string time_id = 2;
}

// Biker location details
message BikerLocation {
    optional string selfie_url = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string bike_license_plate = 4;
    optional string phone = 5;
    optional string alternate_phone = 6;
    optional string biker_type = 7;
    optional double current_lat = 8;
    optional double current_long = 9;

    repeated AssignedRequestId current_request = 10;

    // Date on which this Record was created
    optional int64 date_created = 11;
    optional int64 biker_id = 12;

    //The below two are used just for findbikers usecase and not useful for insert/updateBikerlocation.
    optional double distanceFromMerchant = 13;
    optional int64 destLocationLevel = 14;

    // Biker device token given by GCM
    optional string biker_device_token = 15;

    //To replacebikerstatusupdate, below is added
    optional string bikerStatus = 16;
}
